--- a/src/app/our-models/our-models.component.html
+++ b/src/app/our-models/our-models.component.html
@@ -70,7 +70,7 @@
                   Waist: {{item.waist}} | Hips: {{item.hips}}
                 </p>
               </div>
-              <a class="btnyellow" [routerLink]="['/model-profile']">See More</a>
+              <a class="btnyellow"  [routerLink]="['/model-profile',item._id]">See More</a>
             </div>
           </div>
         </div>
