--- a/src/app/our-models/our-models.component.html
+++ b/src/app/our-models/our-models.component.html
@@ -1197,55 +1197,6 @@
           </div>
         </div>-->
         <!------------Deleted Model-------------->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!--<div class="ourmodelssingleblock">
           <div class="ourmodelssingleimgblock">
             <div class="ourmodelssingleblockimg1">
@@ -1297,7 +1248,7 @@
 
 
         <div class="jointheteam text-center">
-          <a class="btngreen" [routerLink]="['/become-a-model']">Join The Team</a>
+          <a class="btngreen" [routerLink]="['/join-the-talent-team']">Join The Team</a>
         </div>
       </div>
   </div>
