--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6051,12 +6051,20 @@ body{
 
 .modelprofileinfo .form-inline .form-group {
 	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	flex-wrap: wrap;
 }
 
 .modelprofileinfo .form-inline .form-group .form-control{
 	background-color: transparent !important;
 	border:none !important;
 	border-radius: 0px !important;
+	font-size: 16px;
 }
 
 .modelprofileinfo h2{ margin: 0; padding: 0; font-size: 40px; color: #fa0a53; font-family: 'OpenSansBold'; line-height: 48px; width: 100%; text-align: left; text-transform: uppercase; margin-bottom: 30px;}
@@ -6069,10 +6077,10 @@ body{
 	margin-top: 29px;
 }
 
-.modelprofileform .form-group label{width: 160px;}
+.modelprofileform .form-group label{width: 120px;}
 
 .modelprofileform .form-group label{
-	margin: 0; padding: 0; font-size: 20px; color: #666662; font-family: 'OpenSansSemibold'; line-height: 48px; text-align: left; text-transform: uppercase;
+	margin: 0; padding: 0; font-size: 16px; color: #666662; font-family: 'OpenSansSemibold'; line-height: 48px; text-align: left; text-transform: uppercase;
 }
 .modelprofileform .form-group span{
 	margin: 0; padding: 0; font-size: 24px; color: #fff; font-family: 'OpenSans'; line-height: 48px; text-align: left; text-transform: uppercase; height: inherit;
