--- a/src/app/model-profile/model-profile.component.html
+++ b/src/app/model-profile/model-profile.component.html
@@ -54,10 +54,10 @@
                 <span class="form-control">(Arabic)</span>
               </div>
               <div class="form-group instagramsection">
-                <span class="form-control"><a href="https://www.instagram.com/{{model.instagramlink}}" target="_blank"><i class="fa fa-instagram"></i>@{{model.instagramlink}}</a></span>
-                <span class="form-control"><a href="https://www.twitter.com/{{model.twitterlink}}" target="_blank"><i class="fa fa-twitter"></i>@{{model.twitterlink}}</a></span>
-                <span class="form-control"><a href="https://www.facebook.com/{{model.facebooklink}}" target="_blank"><i class="fa fa-facebook"></i>{{model.facebooklink}}</a></span>
-                <span class="form-control"><a href="https://{{model.modelmayhemlink}}" target="_blank"><img src="../../assets/images/instagram-icon4.png" class="instaicon">{{model.modelmayhemlink}}</a></span>
+                <span class="form-control" ><a href="{{gethttplink(model.instagramlink)}}" target="_blank"><i class="fa fa-instagram"></i>{{model.instagramlink}}</a></span>
+                <span class="form-control" *ngIf="model.twitterlink"><a href="{{gethttplink(model.twitterlink)}}" target="_blank"><i class="fa fa-twitter"></i>{{model.twitterlink}}</a></span>
+                <span class="form-control" *ngIf="model.facebooklink"><a href="{{gethttplink(model.facebooklink)}}" target="_blank"><i class="fa fa-facebook"></i>{{model.facebooklink}}</a></span>
+                <span class="form-control" *ngIf="model.modelmayhemlink"><a href="{{gethttplink(model.modelmayhemlink)}}" target="_blank"><img src="../../assets/images/instagram-icon4.png" class="instaicon">{{gethttplink(model.modelmayhemlink)}}</a></span>
               </div>
 
             </div>
