--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -113,7 +113,7 @@
 
 
 
-<!-- Modal -->
+<!-- Modal
 <div class="modal fade modaldefault animated bounceIn" id="fullscreenimgmodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -129,17 +129,17 @@
                     </div>
 
                 </drag-scroll>
-                <!-- Next and previous buttons -->
+                 Next and previous buttons
                 <a class="prev" (click)="movebigLeft()">&#10094;</a>
                 <a class="next" (click)="movebigRight()">&#10095;</a>
 
 
-                <!--<div class="fullscreenimagewrapper">
+                <div class="fullscreenimagewrapper">
                     <img src="../assets/images/modelbigimg/modelmodelbigimg1.jpg" alt="modelmodelbigimg1">
-                </div>-->
+                </div>
 
             </div>
 
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+        </div> /.modal-content
+    </div> /.modal-dialog
+</div> /.modal -->
