--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6045,8 +6045,8 @@ body{
 
 .modelbigimginnerwarpper img{
 	width: 100%;
-	object-fit: cover;
-	height: 100%;
+	object-fit: fill;
+	min-height: 100%;
 }
 
 .modelprofileinfo .form-inline .form-group {
@@ -6237,8 +6237,34 @@ body{
 	opacity: 1;
 }
 
+.fullscreenimagewrapper {
+	height: 100vh;
+	background-position: top center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
+	display: inline-block;
+	width: 100%;
+	position: relative;
+	left: 0;
+	top: 0;
+	overflow: hidden;
+}
 
 
+.fullscreenimagewrapper img {
+	object-fit: cover;
+	width: 100%;
+	left: 0;
+	position: relative;
+	top: 0;
+	min-height: 100%;
+}
+
+
+
+/*
 .fullscreenimagewrapper{
 	height: 100vh;
 	background-position: top center;
@@ -6247,7 +6273,8 @@ body{
 	background-size: cover;
 	-o-background-size: cover;
 	display: inline-block;
-}
+	width: 100%;
+}*/
 /*
 .fullscreenimagewrapper img{
 	object-fit: cover;
@@ -6298,11 +6325,13 @@ body{
 	!* overflow-y: auto; *!
 }*/
 
+/*
 .fullscreenimagewrapper img {
 	object-fit: cover;
 	max-width: 100%;
 	height: 100%;
 }
+*/
 
 /*
 
@@ -6356,9 +6385,57 @@ body{
 
 
 
+/*.modal.modal-fullscreen .modal-dialog,
+.modal.modal-fullscreen .modal-content {
+	bottom: 0;
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+
+.modal.modal-fullscreen .modal-dialog {
+	margin: 0;
+	width: 100%;
+	animation-duration:0.6s;
+}
+.modal.modal-fullscreen .modal-content {
+	border: none;
+	-moz-border-radius: 0;
+	border-radius: 0;
+	-webkit-box-shadow: inherit;
+	-moz-box-shadow: inherit;
+	-o-box-shadow: inherit;
+	box-shadow: inherit;
+	!* change bg color below *!
+	!* background:#1abc9c; *!
+}
+.modal.modal-fullscreen.force-fullscreen {
+	!* Remove the padding inside the body *!
+}
+.modal.modal-fullscreen.force-fullscreen .modal-body {
+	padding: 0;
+}*/
 
 
 
+
+@media (min-width: 401px) {
+	#fullscreenimgmodal .modal-dialog {
+		width: auto;
+		max-width: 96%;
+	}
+}
+
+
+@media (max-width: 400px) {
+	#fullscreenimgmodal .modal-dialog {
+		width: auto;
+		max-width: 90%;
+	}
+
+}
 
 /*----End of our models css---*/
 
