--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6045,7 +6045,7 @@ body{
 
 .modelbigimginnerwarpper img{
 	width: 100%;
-	object-fit: fill;
+	object-fit: cover;
 	min-height: 100%;
 }
 
@@ -6249,7 +6249,7 @@ body{
 	position: relative;
 	left: 0;
 	top: 0;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 
@@ -6257,11 +6257,17 @@ body{
 	object-fit: cover;
 	width: 100%;
 	left: 0;
-	position: relative;
+	position: absolute;
 	top: 0;
 	min-height: 100%;
 }
 
+
+#fullscreenimgmodal .modal-dialog{
+	width:auto;
+	height:auto;
+	max-height:100%;
+}
 
 
 /*
@@ -6385,42 +6391,6 @@ body{
 
 
 
-/*.modal.modal-fullscreen .modal-dialog,
-.modal.modal-fullscreen .modal-content {
-	bottom: 0;
-	left: 0;
-	position: absolute;
-	right: 0;
-	top: 0;
-}
-
-
-.modal.modal-fullscreen .modal-dialog {
-	margin: 0;
-	width: 100%;
-	animation-duration:0.6s;
-}
-.modal.modal-fullscreen .modal-content {
-	border: none;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	-webkit-box-shadow: inherit;
-	-moz-box-shadow: inherit;
-	-o-box-shadow: inherit;
-	box-shadow: inherit;
-	!* change bg color below *!
-	!* background:#1abc9c; *!
-}
-.modal.modal-fullscreen.force-fullscreen {
-	!* Remove the padding inside the body *!
-}
-.modal.modal-fullscreen.force-fullscreen .modal-body {
-	padding: 0;
-}*/
-
-
-
-
 @media (min-width: 401px) {
 	#fullscreenimgmodal .modal-dialog {
 		width: auto;
@@ -6429,7 +6399,7 @@ body{
 }
 
 
-@media (max-width: 400px) {
+@media (min-width: 400px) {
 	#fullscreenimgmodal .modal-dialog {
 		width: auto;
 		max-width: 90%;
