--- a/src/app/musicvideos/musicvideos.component.html
+++ b/src/app/musicvideos/musicvideos.component.html
@@ -87,7 +87,7 @@
 <div class="container-fluid musicvideoblock3">
 
   <div class="musicvideoblock3wrapper">
-    <h2>Music Videos We have Associated With</h2>
+    <h2>Music Videos We have booked</h2>
     <div class="videolistswrapper">
       <ul class="videolists">
         <li> <a href="https://www.youtube.com/watch?v=6ONRf7h3Mdk" target="_blank">Travis Scott | "Sicko Mode" (dir. Dave Meyers & Travis Scott) | Model Placement (2018)</a></li>
