--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -32,12 +32,13 @@
 
     <li>
       <a [routerLink]="['/music-division']">Music Division<!--Music Management --><i class="fa fa-chevron-right"></i></a>
-      <ul id="subsidemenuDropdown3" class="newsubsidemenu">
+<!--      <ul id="subsidemenuDropdown3" class="newsubsidemenu">-->
 
-        <li><a [routerLink]="['/#']">Media Division<!--our models--><i class="fa fa-chevron-right"></i></a></li>
-      </ul>
+<!--        <li><a [routerLink]="['/#']">Media Division&lt;!&ndash;our models&ndash;&gt;<i class="fa fa-chevron-right"></i></a></li>-->
+<!--      </ul>-->
     </li>
-    <li><a href="javascript:void(0)">Calendar<i class="fa fa-chevron-right"></i></a></li>
+    <li><a [routerLink]="['/#']">Media Division<!--our models--><i class="fa fa-chevron-right"></i></a></li>
+<!--    <li><a href="javascript:void(0)">Calendar<i class="fa fa-chevron-right"></i></a></li>-->
     <li><a [routerLink]="['/contact-us']">Contact Us <i class="fa fa-chevron-right"></i></a></li><li><a target="_blank" href="{{apiService.loginurl}}">Login <i class="fa fa-chevron-right"></i></a></li>
   </ul>
   </div>
