--- a/src/app/music-management/music-management.component.html
+++ b/src/app/music-management/music-management.component.html
@@ -42,6 +42,12 @@
         <div class="sponsorblock"><!---sponsorblockgraybg--->
           <img src="../assets/images/newhome_sproofmusicgroupdiv_img4.png" alt="#">
         </div>
+        <div class="sponsorblock">
+          <img src="../assets/images/newhome_sproofmusicgroupdiv_img5.png" alt="#">
+        </div>
+        <div class="sponsorblock">
+          <img src="../assets/images/newhome_sproofmusicgroupdiv_img6.png" alt="#">
+        </div>
       </div>
       <div class="musicmanagementblock1_bottomdiv">
         <p>
