--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -302,6 +302,12 @@
                 <div class="sponsorblock"><!---sponsorblockgraybg--->
                     <img src="../assets/images/newhome_sproofmusicgroupdiv_img4.png" alt="#">
                 </div>
+                <div class="sponsorblock">
+                    <img src="../assets/images/newhome_sproofmusicgroupdiv_img5.png" alt="#">
+                </div>
+                <div class="sponsorblock">
+                    <img src="../assets/images/newhome_sproofmusicgroupdiv_img6.png" alt="#">
+                </div>
             </div>
 
             <div class="btncheckshatterproof">
